initial implementation of object pool